solved error of cycling

--- a/preprocessing_data.ipynb
+++ b/preprocessing_data.ipynb
@@ -347,7 +347,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# 1:running 2:strength 3:Elyptic\n",
+    "# 1:cycling 2:strength 3:Elyptic\n",
     "filtered_df['sport']=2\n"
    ],
    "metadata": {
